Prevent text cut off in mobile view

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -24,6 +24,10 @@ main {
     font-size: 20px;
     width: 60%
   }
+
+  @media (max-width: 768px) {
+    left: 5%;
+  }
 }
 
 p {
